--- a/DREWMAIN/app/utilities/Styles.css
+++ b/DREWMAIN/app/utilities/Styles.css
@@ -1,5 +1,34 @@
-/*body { margin:0; padding:0; }
-#map { position:absolute; top:0; bottom:0; width:100%; }*/
+h1 {
+  text-align: center;
+  padding: 10px;
+}
+
+h2 {
+  display: inline;
+  padding: 10px;
+  background-color: blue;
+  color: white;
+}
+
+#map {
+  position:absolute;
+  top:0; bottom:0;
+  margin-top: 10%;
+  width:100%;
+}
+.nav a {
+  color: white;
+  text-decoration: none;
+}
+.dropdown {
+float: right;
+margin: 30px;
+background-color: #ffffff;
+border: 1px solid black;
+opacity: 0.6;
+filter: alpha(opacity=60); /* For IE8 and earlier */
+padding-top: -20px;
+}
 
 /*@import url(http://fonts.googleapis.com/css?family=Open+Sans:700);
 .cssmenu {
@@ -136,4 +165,3 @@
   width: 300px;
   margin: auto;
   /*display:block;*/
-}*/
