--- a/DREWMAIN/app/utilities/Styles.css
+++ b/DREWMAIN/app/utilities/Styles.css
@@ -1,11 +1,14 @@
+@import url(https://fonts.googleapis.com/css?family=Cinzel:400,900);
+
 h1 {
+  font-family: 'Cinzel', serif;
   text-align: center;
   padding: 10px;
 }
 
 h2 {
   display: inline;
-  padding: 10px;
+  padding: 20px;
   background-color: blue;
   color: white;
 }
@@ -14,20 +17,27 @@ h2 {
   position:absolute;
   top:0; bottom:0;
   margin-top: 10%;
-  width:100%;
+  width:70%;
+  height: 80%;
 }
 .nav a {
   color: white;
   text-decoration: none;
 }
+option {
+  color: light blue;
+}
 .dropdown {
 float: right;
-margin: 30px;
-background-color: #ffffff;
-border: 1px solid black;
+border: 4px solid black;
 opacity: 0.6;
 filter: alpha(opacity=60); /* For IE8 and earlier */
-padding-top: -20px;
+padding-top: -30px;
+width: 25%;
+height: 80%;
+text-align: center;
+margin-top: 5%;
+background-color: grey;
 }
 
 /*@import url(http://fonts.googleapis.com/css?family=Open+Sans:700);
