--- a/DREWMAIN/app/utilities/Styles.css
+++ b/DREWMAIN/app/utilities/Styles.css
@@ -1,5 +1,11 @@
 @import url(https://fonts.googleapis.com/css?family=Cinzel:400,900);
 
+
+nav {
+  text-align: center;
+  text-decoration: none;
+}
+
 h1 {
   font-family: 'Cinzel', serif;
   text-align: center;
@@ -7,26 +13,42 @@ h1 {
 }
 
 h2 {
-  display: inline;
-  padding: 20px;
-  background-color: blue;
+  display: inline-block;
+  padding: 5px;
   color: white;
 }
+
+h3 {
+  display: inline;
+  padding: 20px;
+}
+
+a {
+    text-decoration: none;
+}
+select {
+    border: 0 none;
+    color: #FFFFFF;
+    background: transparent;
+    font-size: 12px;
+    font-weight: bold;
+    padding: 2px 10px;
+    width: 160px;
+    background: #f96e5b;
+
+}
+
 
 #map {
   position:absolute;
   top:0; bottom:0;
   margin-top: 10%;
-  width:70%;
-  height: 80%;
+  width:73%;
+  height: 85%;
 }
-.nav a {
-  color: white;
-  text-decoration: none;
-}
-option {
-  color: light blue;
-}
+
+
+
 .dropdown {
 float: right;
 border: 4px solid black;
