--- a/DREWMAIN/app/utilities/Styles.css
+++ b/DREWMAIN/app/utilities/Styles.css
@@ -14,7 +14,8 @@ nav {
   width: 100%;
   height: auto;
   opacity: 0.6;
-  padding: 10px;
+  padding: 12px;
+  border: 2px solid black;
 
 }
 
@@ -33,13 +34,15 @@ h2 {
 h3 {
   display: inline;
   padding: 20px;
+  border-right: 2px white;
 }
 
-a {
-    text-decoration: none;
-    color: white;
-    font-size: 20px;
-    font-family: 'Josefin Sans', sans-serif;
+
+nav a {
+  text-decoration: none;
+  color: white;
+  font-size: 20px;
+  padding: 30px;
 }
 select {
     border: 0 none;
@@ -56,22 +59,32 @@ select {
   position:absolute;
   top:0;
   bottom:0;
-  margin-top: 13%;
+  margin-top: 14%;
   width:100%;
   height: 87%;
 
 }
 
+.tip {
+  text-align: center;
+  padding: 30px;
+  font-size: 20px;
+}
+
 .group {
   text-align: center;
+  padding: 10px;
+
 }
-.groupPic {
-  padding: 30px;
-  width: 400px;
-  height: 350px;
-  font-family: 'Josefin Sans', sans-serif;
-  border-radius: 50%;
+.drew {
+  padding: 10px;
+  width: 900px;
+  height: 400px;
+  margin-top: 5%;
+
+
 }
+
 
 
 
